# Ripple

./: .gitignore  .pre-commit-config.yaml  .rusty-hook.toml  CODEOWNERS.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  backup.sh  codecov.yaml  codecov.yml  coverage.sh  github setup  patch  patch.diff  ripple  ripple_rss.sh  run-clippy.sh
.github/: codecov.yml  (+2 more)
core/launcher/: Cargo.toml
core/launcher/src/: launcher_event_processor.rs  launcher_ffi.rs  launcher_lifecycle_processor.rs  launcher_state.rs  lib.rs
core/launcher/src/manager/: app_launcher.rs  container_manager.rs  container_message.rs  device_launcher_event_manager.rs  stack.rs  view_manager.rs
core/main/: Cargo.toml  build.rs
core/main/src/: lib.rs  main.rs
core/main/src/bootstrap/: README.md  boot.rs  logging_bootstrap_step.rs  mod.rs  setup_extn_client_step.rs  start_app_manager_step.rs  start_apps_updater_step.rs  start_communication_broker.rs  start_fbgateway_step.rs  start_storage_migrator_step.rs  start_ws_step.rs
core/main/src/broker/: broker_utils.rs  context.rs  endpoint_broker.rs  event_management_utility.rs  extn_broker.rs  http_broker.rs  mod.rs  provider_broker_state.rs  rules_engine.rs  service_broker.rs  ssda_service_broker.rs  thunder_broker.rs  websocket_broker.rs  workflow.rs  workflow_broker.rs
core/main/src/firebolt/: firebolt_gatekeeper.rs  firebolt_gateway.rs  firebolt_permitter.rs  firebolt_ws.rs  mod.rs  rpc.rs  rpc_router.rs
core/main/src/processor/: account_link_processor.rs  app_events_processor.rs  authorized_info_processor.rs  config_processor.rs  dist_token_change_processor.rs  exn_status_processor.rs  keyboard_processor.rs  lifecycle_management_processor.rs  main_context_processor.rs  metrics_manager.rs  metrics_processor.rs  mod.rs  network_event_processor.rs  pin_processor.rs  power_event_processor.rs  rpc_gateway_processor.rs  settings_processor.rs  store_privacy_settings_processor.rs  store_user_grants_processor.rs  wait_for_service_processor.rs
core/main/src/service/: context_manager.rs  data_governance.rs  mod.rs  settings_processor.rs  telemetry_builder.rs  user_grants.rs  user_grants.rs_
core/main/src/state/: bootstrap_state.rs  extn_state.rs  firebolt-open-rpc.json  metrics_state.rs  mod.rs  openrpc_state.rs  ops_metrics_state.rs  otel_state.rs  platform_state.rs  ripple-rpc.json  ripple_cache.rs  session_state.rs
core/main/src/utils/: common.rs  mod.rs  router_utils.rs  rpc_utils.rs  serde_utils.rs  test_utils.rs  utils.rs
core/sdk/: Cargo.toml
core/sdk/docs/: capabilities.md  client.md
core/sdk/src/: lib.rs  types.rs
core/sdk/src/api/: accessory.rs  account_link.rs  app_catalog.rs  apps.rs  caps.rs  config.rs  context.rs  default_storage_properties.rs  lifecycle.rs  mock_server.rs  mock_websocket_server.rs  mod.rs  protocol.rs  pubsub.rs  ripple_cache.rs  rules.rs  session.rs  settings.rs  status_update.rs  storage_manager.rs  storage_manager_utils.rs  storage_property.rs  usergrant_entry.rs  wifi.rs
core/sdk/src/extn/: extn_capability.rs  extn_client_message.rs  extn_id.rs  mock_extension_client.rs  mod.rs
core/sdk/src/framework/: bootstrap.rs  device_manifest_bootstrap.rs  file_store.rs  mod.rs  ripple_contract.rs
core/sdk/src/manifest/: device.rs  extn.rs  mod.rs
core/sdk/src/mock/: errors.rs  mock_config.rs  mock_data.rs  mock_server.rs  mock_web_socket_server.rs  utils.rs
core/sdk/src/processor/: mod.rs  rpc_request_processor.rs  rpc_router.rs
core/sdk/src/runtime/: mod.rs  task_registry.rs
core/sdk/src/service/: mod.rs  service_client.rs  service_event_state.rs  service_message.rs  service_rpc_router.rs
core/sdk/src/utils/: async_utils.rs  channel_utils.rs  error.rs  extn_utils.rs  logger.rs  mock_utils.rs  mod.rs  path_utils.rs  router_utils.rs  rpc_utils.rs  serde_utils.rs  sync.rs  test_utils.rs  time_utils.rs  ws_utils.rs
device/mock_device/: Cargo.toml  README.md  stats.json
device/mock_device/src/: boot_ws_server.rs  errors.rs  lib.rs  main.rs  mock-device-openrpc.json  mock_config.rs  mock_data.rs  mock_device_controller.rs  mock_device_ffi.rs  mock_device_processor.rs  mock_device_ws_server_processor.rs  mock_server.rs  mock_web_socket_server.rs  mock_ws_server.rs  test_utils.rs  utils.rs
device/thunder/: Cargo.toml
device/thunder/src/: lib.rs  thunder_ffi.rs  thunder_state.rs
device/thunder/src/bootstrap/: boot_thunder.rs  boot_thunder_channel.rs  get_config_step.rs  setup_thunder_extns.rs  setup_thunder_pool_step.rs  setup_thunder_processors.rs
device/thunder/src/client/: jsonrpc_method_locator.rs  plugin_manager.rs  thunder_client.rs  thunder_client_pool.rs  thunder_plugin.rs
device/thunder/src/processors/: thunder_browser.rs  thunder_device_info.rs  thunder_events.rs  thunder_extn_processor.rs  thunder_persistent_store.rs  thunder_remote.rs  thunder_wifi.rs  thunder_window_manager.rs
device/thunder_ripple_sdk/: Cargo.toml
device/thunder_ripple_sdk/src/: lib.rs  thunder_state.rs  utils.rs
distributor/general/: Cargo.toml
distributor/general/src/: distributor_general_ffi.rs  general_advertising_processor.rs  general_discovery_processor.rs  general_distributor_token_processor.rs  general_entitlements_processor.rs  general_media_events_processor.rs  general_metrics_processor.rs  general_paltform_token_processor.rs  general_permission_processor.rs  general_permissions_map.json  general_privacy_processor.rs  general_securestorage_processor.rs  general_session_processor.rs  general_token_processor.rs  general_watch_history_processor.rs  lib.rs
openrpc_validator/: Cargo.toml
openrpc_validator/src/: lib.rs
openrpc_validator/src/test/: firebolt-open-rpc.json
ripple-macros/proc-macros/: Cargo.toml
ripple-macros/proc-macros/src/: lib.rs
ssda/example-service/: Cargo.toml
ssda/example-service/src/: main.rs
ssda/ssda_client/: Cargo.toml
ssda/ssda_client/src/: lib.rs
ssda/ssda_service/: Cargo.toml
ssda/ssda_service/src/: lib.rs
ssda/ssda_types/: Cargo.toml
ssda/ssda_types/src/: lib.rs
tools/device_manifest_validator/: Cargo.toml
tools/device_manifest_validator/src/: main.rs
(+319 files in other folders)
