# Copyright 2023 Comcast Cable Communications Management, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0
#

[workspace]
resolver = "2"
members = [
    "core/sdk",
    "core/tdk",
    "device/thunder_ripple_sdk",
    "core/main",
    "core/launcher",
    "device/thunder",
    "distributor/general",
    "examples/rpc_extn",
    "examples/tm_extn",
]

[workspace.package]
version = "1.0.0"

[workspace.dependencies]
base64 = "0.21.5"
chrono = "0.4"
futures = "0.3.21"
futures-channel = "0.3.21"
jsonrpsee = "0.9.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
querystring = "1.1.0"
regex = "1.10.2"
ripple_sdk = { path = "./core/sdk" }
tokio = "1.16.1"
tokio-tungstenite = "0.20.1"
url = "2.2.2"
urlencoding = "2.1.0"
