# Copyright 2023 Comcast Cable Communications Management, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0
#
[workspace]
resolver = "2"
members = [
    "core/sdk",
    "core/tdk",
    "device/thunder_ripple_sdk",
    "core/main",
    "device/thunder",
    "device/mock_device",
    "distributor/general",
    "examples/rpc_extn",
    "examples/tm_extn",
    "openrpc_validator"]

[workspace.package]
version = "1.1.0"

[workspace.dependencies]
base64 = { version = "0.22.1", default-features = false, features=["alloc"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures = { version = "0.3.21", default-features = false }
futures-channel = { version = "0.3.21", default-features = false }
jsonrpsee = { version = "=0.16.3", default-features = false }
querystring = { version = "1.1.0", default-features = false }
regex = { version = "1.10.4", features = ["std"], default-features = false }
serde_json = { version = "1.0", default-features = false}
serde = { version = "1.0", features = ["derive"], default-features =  false  }
tokio = { version = "1.44.1", default-features = false }
tokio-tungstenite = { version = "0.20.1", default-features = false }
url = { version = "=2.5.0", default-features = false}
urlencoding = { version = "2.1.0", default-features = false}
uuid = { version = "1.13.1", default-features = false }
ripple_sdk = { path = "./core/sdk" }
proc-macro2 = { version = "1.0.86"}

[profile.release]
strip=true
opt-level="z"
codegen-units=1
lto=true
panic="abort"
