[package]
name = "openrpc_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonschema = "0.17.1"
# jsonschema = { path = "../jsonschema-rs/jsonschema" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = "=4.0"