[package]
name = "launcher"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ripple_sdk = { path = "../../core/sdk" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.2.2"