# Copyright 2023 Comcast Cable Communications Management, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0
#

[package]
name = "main"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/rdkcentral/Ripple"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ripple"
path = "src/main.rs"

[features]
local_dev = []
sysd = ["sd-notify"]
pre_prod = []

[dependencies]
ripple_sdk = { path = "../sdk", features = ["full"] }
jsonrpsee = { version = "0.9.0", features = ["macros", "ws-server"] }
futures-channel = "0.3.21"
futures = "0.3.21"
tokio-tungstenite = "0.17.1"
querystring = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
arrayvec = "0.7.2"
regex = "=1.7.3"
serde_json = "1.0"
env-file-reader = "0.2.0"
base64 = "0.13.0"
sd-notify = { version = "0.4.1", optional = true }
exitcode = "1.1.2"
rand = "0.8"

[build-dependencies]
vergen = "1"

[dev-dependencies]
ripple_tdk = { path = "../tdk" }
rstest = "0.18.0"
