# Copyright 2023 Comcast Cable Communications Management, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0
#

[package]
name = "main"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/rdkcentral/Ripple"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ripple"
path = "src/main.rs"

[features]
local_dev = []
sysd = ["sd-notify"]
pre_prod = []

[dependencies]
base64.workspace = true
ripple_sdk = { workspace = true, features = ["full"] }
jsonrpsee = { workspace = true, features = ["macros", "ws-server"] }
futures-channel.workspace = true
futures.workspace = true
tokio-tungstenite = { workspace = true, features = ["handshake"] }
querystring.workspace = true
serde.workspace = true
regex.workspace = true
serde_json.workspace = true

arrayvec = { version ="0.7.2", default-features = false }
env-file-reader = "0.2.0"
sd-notify = { version = "0.4.1", optional = true }
exitcode = "1.1.2"
rand = { version = "0.8", default-features = false }
url.workspace = true
futures-util = { version = "0.3.28", features = ["sink", "std"], default-features = false}
hyper = { version = "=0.14.27", features = ["client", "http1", "tcp"], default-features = false }
jaq-interpret = { version = "1.5.0", default-features = false }
jaq-parse = { version = "1.0.2", default-features = false }
jaq-core = "1.5.0"
jaq-std = { version = "1.5.1", default-features = false }

openrpc_validator = { path = "../../openrpc_validator" }

[build-dependencies]
vergen = "1"

[dev-dependencies]
ripple_tdk = { path = "../tdk" }
rstest = "0.18.0"
