# Copyright 2023 Comcast Cable Communications Management, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0
#
[package]
name = "ripple_sdk"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/rdkcentral/Ripple"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
rpc = ["jsonrpsee"]
tdk = []
full = ["rpc"]
sysd = []
test = ["jsonrpsee"]
contract_tests = []

[dependencies]

#dependencies inherited from workspace
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
#chrono = { features = ["clock"], default-features = false, version = "0.4" }
tokio = { workspace = true, features = [
    "macros",
    "sync",
    "rt-multi-thread",
    "signal",
    "time",
] }
futures.workspace = true
jsonrpsee = { workspace = true, features = ["ws-server"], optional = true }
regex.workspace = true
uuid = { workspace = true, features = ["serde", "v5", "v4"] }


serde_yaml = "0.9.10"
serde_millis = "0.1.1"
semver = "1.0.20"
log = "0.4"
fern = "0.6"
async-trait = "0.1.57"
libloading = "0.7.4"
async-channel = "=2.1.0"
tree_magic_mini = { version = "=3.0.3", optional = true}

[dev-dependencies]
ripple_sdk = { path = ".", features=["tdk"]}

rstest = "0.18.0"
async-std = { version = "1.5", features = ["attributes"] }
testing_logger = "0.1.1"
