

[package]
name = "mock_device"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ripple_sdk = { path = "../../core/sdk" }
serde_json = "1.0"
serde-hashkey = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = { version = "0.20.0" }
url = "2.2.2"
http = "0.2.8"
