# Copyright 2023 Comcast Cable Communications Management, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0
#

[package]
name = "mock_device"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
http = "0.2.8"
jsonrpsee = { version = "0.9.0", features = ["macros", "jsonrpsee-core"] }
ripple_sdk = { path = "../../core/sdk" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = { version = "0.20.0" }
url = "2.2.2"


[dev-dependencies]
ripple_tdk = { path = "../../core/tdk" }
