[package]
name = "thunder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
thunder_ripple_sdk = { path = "../thunder_ripple_sdk" }
serde = { version = "1.0", features = ["derive"] }
