# Copyright 2023 Comcast Cable Communications Management, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0
#


[package]
name = "thunder_ripple_sdk"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/rdkcentral/Ripple"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
contract_tests = [
    "pact_consumer",
    "reqwest",
    "expectest",
    "maplit",
    "test-log",
    "home",
    "tree_magic_mini",
    "rstest"
]

[dependencies]
ripple_sdk = { path = "../../core/sdk"}
ripple_tdk = { path = "../../core/tdk" }
jsonrpsee = { version = "0.9.0", features = ["macros", "ws-client"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.2.2"
strum = "0.24"
strum_macros = "0.24"
pact_consumer = { version = "1.0.0", optional = true }
reqwest = { version = "0.11", optional = true }
expectest = { version = "0.12.0", optional = true }
maplit = { version = "1.0.2", optional = true }
test-log = { version = "=0.2.11", optional = true }
csv = "=1.1.5"
base64 = "0.13.0"
home = { version = "=0.5.5", optional = true}
regex = "1.7.3"
tree_magic_mini = { version = "=3.0.3", optional = true}
rstest = { version = "0.18.2", optional = true}

[dev-dependencies]
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
ripple_sdk = { path = "../../core/sdk", features=["tdk"]}