# Copyright 2023 Comcast Cable Communications Management, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0
#

[package]
name = "thunder_ripple_sdk"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/rdkcentral/Ripple"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
http_contract_tests = [
     "pact_consumer",
    "reqwest",
    "expectest",
    "maplit",
    "test-log",
    "home",
    "tree_magic_mini",
    "rstest",
    "futures-util"
]
websocket_contract_tests = [
     "pact_consumer",
    "reqwest",
    "expectest",
    "maplit",
    "test-log",
    "home",
    "tree_magic_mini",
    "rstest",
    "futures-util"    
]

contract_tests = [
    "http_contract_tests",
    "websocket_contract_tests",
]
local_dev=[]
mock=[]


[dependencies]
base64 = { workspace = true, default-features = false, features=["alloc"] }
base64ct = {version = "=1.7.3"}
ripple_tdk = { path = "../../core/tdk" }
ripple_sdk.workspace = true
regex.workspace = true
jsonrpsee = { workspace = true, features = ["macros", "ws-client"] }
serde.workspace = true
serde_json.workspace = true
url.workspace = true
futures-channel.workspace = true
futures.workspace = true

strum = { version = "0.24", default-features = false }
strum_macros = "0.24"
pact_consumer = { version = "=1.0.0", optional = true }
reqwest = { version = "0.11", optional = true, default-features = false }
expectest = { version = "0.12.0", optional = true }
maplit = { version = "1.0.2", optional = true }
test-log = { version = "=0.2.11", optional = true }
csv = "1.1"  # Allowing minor updates
home = { version = "=0.5.5", optional = true }
tree_magic_mini = { version = "=3.0.3", optional = true }
rstest = { version = "0.18.2", optional = true, default-features = false }
futures-util = { version = "0.3.28", features = ["sink", "std"], default-features = false, optional = true}

[dev-dependencies]

ripple_sdk = { path = "../../core/sdk", features = ["tdk"] }
rstest = "0.18.2"
