[package]
name = "ripple_proc_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
#name = "proc_macros"
#path = "src/lib.rs"


[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = { version = "2.0.23", features = ["full"] }
crossbeam-channel = "0.5.9"
ripple_sdk = { path = "../../core/sdk", features = ["full"] }
main =  {path="../../core/main" }

[dev-dependencies]
crossbeam-channel = "0.5.9"