[package]
name = "ssda_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ws = "0.9.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
ssda_types = {path = "../ssda_types"}
async-trait = "0.1.88"
serde_json = "1.0.140"
tokio-tungstenite = "0.20.1"
tungstenite = "0.26.2"
url = "2.5.4"