[package]
name = "ssda_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ws = "0.9.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
ssda_types = {path = "../ssda_types"}
url = "2.5.4"
ripple_sdk = { path="../../core/sdk" }
jsonrpsee =  {version= "0.24.9", features= ["server", "macros"] }