[package]
name = "ssda_service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
serde_json = "1.0.140"
ssda_types = {path="../ssda_types"}

ripple_sdk = { path="../../core/sdk" }

tokio = "1.44.2"
mockall = "0.13.1"
tokio-tungstenite = "0.20.1"
http = "0.2.12"
url = "2.5.4"
log = "0.4.27"
futures-util = "0.3.31"
env_logger = "0.11.8"
