[package]
name = "ssda_types"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpsee = { version = "=0.16.3", default-features = false }

ripple_sdk = {path = "../../core/sdk"}

async-trait = "0.1.88"
mockall = "0.13.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.1"
futures-util = "0.3"
url = "2.5"
uuid = "1.16.0"

http = "0.2.12"
tokio-websockets = { version =  "0.11.4", features=["client","openssl","rand"]}
stream-tungstenite = "0.4.5"
