[package]
name = "ssda_types"
version = "0.1.0"
edition = "2021"

[dependencies]

ripple_sdk = { path="../../core/sdk" }

async-trait = "0.1.88"
mockall = "0.13.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.1"
futures-util = "0.3"
url = "2.5"
http = "0.2.12"
jsonrpsee =  {version= "0.24.9", features= ["server", "macros"] }
pprof = { version = "0.15", features = ["flamegraph"] }
env_logger = "0.11.8"
