[workspace]

[package]
name = "device_manifest_validator"
edition = "2021"
version.workspace = true

[[bin]]
name = "device_manifest_validator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.9.0", default-features = false }
ripple_sdk = { path = "../../core/sdk" }
serde_json = { version = "1.0", default-features = true}
serde = { version = "1.0", features = ["derive"] }