# Copyright 2025 Comcast Cable Communications Management, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0
#
[package]
name = "mock_app_gw"
version = "0.1.0"
edition = "2021"

[features]
default = []
mock_service = []

[dependencies]
tokio = { workspace = true, features = ["full"]}
tokio-tungstenite = "0.20"
futures-util = { version = "0.3.28", default-features = false}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { workspace = true, features = ["v4"] }
async-trait = "0.1.57"

[lib]
path = "lib.rs"

[[bin]]
name = "appgw"
path = "bin/appgw.rs"
required-features = ["mock_service"]

[[bin]]
name = "service1"
path = "bin/service1.rs"
required-features = ["mock_service"]

[[bin]]
name = "service2"
path = "bin/service2.rs"
required-features = ["mock_service"]

[[bin]]
name = "test_cli"
path = "bin/test_cli.rs"
required-features = ["mock_service"]
